# GenAI-AgenticAI

./: .env  main.py  pyproject.toml
1-langchain/: langchainBasics.ipynb  llm_call.py  tools.ipynb
1-langchain/templates/: index.html
1-langchain_Basics/: langchainBasics.ipynb
